force-app/main/default/objects/Country_Relatioship__c/Country_Relatioship__c.object-meta.xml
<CustomObject>
    <label>Configuración País</label>
    <nameField>
        <label>País</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuración Paises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>