force-app/main/default/objects/Country_Relatioship__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Código del País</label>
    <length>50</length>
    <type>Text</type>
</CustomField>