force-app/main/default/objects/Country_Relatioship__c/fields/Delegate__c.field-meta.xml
<CustomField>
    <fullName>Delegate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Country_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>