force-app/main/default/objects/Country_Relatioship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country_Code__c</columns>
    <columns>Country_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>